--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         max-width: 100%;
         vertical-align: top;
       }
-    </style>  
+    </style>
   </head>
   <body>
     <img src="header.jpg" alt="">
+    <img src="hero.jpg" alt="">
   </body>
 </html>
